Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19141

server_audit_excl_users accepts only values with less than 1024 chars

    XMLWordPrintable

Details

    Description

      Assigning to server_audit_excl_users seems to be cut at ~ 1024 chars.

      To reproduce..

      SET GLOBAL server_audit_excl_users = "'root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root3','root4'"
      

      Output for the variables...

      SHOW GLOBAL VARIABLES LIKE '%server_audit_excl_users%';
      

       
      SELECT LENGTH("'root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root','root3'");
      

      User root4 will be cut.

      It seems, it will be caused by

      #define SHOW_VAR_FUNC_BUFF_SIZE 1024

      from MySQL Plugin API

      https://dev.mysql.com/doc/refman/8.0/en/plugin-data-structures.html#plugin-status-system-variables

      So it be expanded to more than 1024 or throw an error message and documented in the audit plugin documentation.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              Richard Richard Stracke
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: