MDEV-19141 server_audit_excl_users accepts only values with less than 1024 chars.

Since this limit is imposed by the SHOW_VAR_FUNC_BUFF_SIZE, we just
launch the error message.